- Multilabel performance metrics. Automatically used in plot_SVM
  when using multilabel workflow.
- Full oversampling of underrepresented classes.


Changed
~~~~~~~
- Reduced memory usage by not passing fitted objects, but just the
 (hyper)parameters.
- All metrics used in evaluation are now combined in a metrics
  script in the classification folder.
- Cleaned crossval function for readability.

Fixed
~~~~~
- Catch error when validation set is too small.
- Logging of cross validation now works properly by removing previous
  log filehandles.
- Ordering of methods in the SearchCV preprocess function now
  corresponds with fitandscore.
- Bug


2.1.0 - 2018-08-09
------------------


Added
~~~~~

- PREDICT Exceptions in general.
- A PREDICT ValueError catch when fitting the classifiers has failed and thus
  output is missing.
- Feature imputation added in fitandscore. Made additions in scripts parsing
  these fields
  towards fitandscore.
- Logistic regression classifier.
- Ensemble performance computing in plot_SVM.
- Feature selection based on variance taking the mean of the features into
  account.
- Added PCA as feature selection method.
- Added plot_feature_groups function. Note that it's not used yet by default in
  the trainclassifier analysis
- Some more docstrings and cleaned some functions.
- Save the cv_iter object in the SearchCV so you can re-use the
  training/validation splits.
- Ensembling based on Caruana et al. 2004 in the SearchCV object.
- plot_SVM function also outputs percentage of crossval iterations in which
  patient got classified correctly.
- Temporary save setting for crossval function is now in general config.
- Fastr execution plugin type is now also an argument for the SearchCV object.


Changed
~~~~~~~

- LoG features are now computed per 2-D slice, as is done with most other
  features as well.
- SVM parameters slack is now dependent on features.
- Removed normalization in calcfeatures: now in separate node in WORC.