@@ -116,25 +116,26 @@ def construct_SVM(config, image_features, regression=False):
 
     # TODO: move the max_iter parameter to main config
     if not regression:
-        clf = SVC(class_weight='balanced', probability=True, max_iter=100000)
+        clf = SVC(class_weight='balanced', probability=True, max_iter=1E7)
     else:
-        clf = SVMR(max_iter=100000)
+        clf = SVMR(max_iter=1E7)
 
     if config['Classification']['Kernel'] == "polynomial" or config['Classification']['Kernel'] == "poly":
         param_grid = {'kernel': ['poly'],
-                      'C': scipy.stats.uniform(loc=0, scale=np.sqrt(len(image_features))),
-                      'degree': scipy.stats.uniform(loc=1, scale=4),
-                      'coef0': scipy.stats.uniform(loc=0, scale=1)}
+                      'C': scipy.stats.uniform(loc=0, scale=1E6),
+                      'degree': scipy.stats.uniform(loc=1, scale=6),
+                      'coef0': scipy.stats.uniform(loc=0, scale=1),
+                      'gamma': scipy.stats.uniform(loc=1E-5, scale=1)}
 
     elif config['Classification']['Kernel'] == "linear":
         param_grid = {'kernel': ['linear'],
-                      'C': scipy.stats.uniform(loc=0, scale=np.sqrt(len(image_features))),
+                      'C': scipy.stats.uniform(loc=0, scale=1E6),
                       'coef0': scipy.stats.uniform(loc=0, scale=1)}
 
     elif config['Classification']['Kernel'] == "rbf":
         param_grid = {'kernel': ['rbf'],
-                      'C': scipy.stats.uniform(loc=0, scale=np.sqrt(len(image_features))),
-                      'gamma':  scipy.stats.uniform(loc=0, scale=1e-3)}
+                      'C': scipy.stats.uniform(loc=0, scale=1E6),
+                      'gamma': scipy.stats.uniform(loc=1E-5, scale=1)}
     else:
         raise ae.PREDICTKeyError("{} is not a valid SVM kernel type!").format(config['Classification']['Kernel'])
 
